@@ -1,7 +1,9 @@
 # Makefile.am for man/man3
 
+ATALK_MANS = atalk_aton.3 nbp_name.3
+
 if USE_APPLETALK
-man_MANS = atalk_aton.3 nbp_name.3
+man_MANS = $(ATALK_MANS)
 endif
 
-EXTRA_DIST = $(man_MANS)
+EXTRA_DIST = $(ATALK_MANS)
