@@ -1,7 +1,9 @@
 # Makefile.am for man/man4/
 
+ATALK_MANS = atalk.4
+
 if USE_APPLETALK
-man_MANS = atalk.4
+man_MANS = $(ATALK_MANS)
 endif
 
-EXTRA_DIST = $(man_MANS)
+EXTRA_DIST = $(ATALK_MANS)
